# VMG8825-D70B

platform/iad/driver/lantiq_drv_kpi2udp-git/lantiq_drv_kpi2udp/: CHANGELOG  Makefile.am  README  configure.in  drv_version.h  ifx_udp_redirect.c
platform/iad/driver/lantiq_drv_kpi2udp-git/lantiq_drv_kpi2udp/m4/: common.m4  kernel.m4
platform/iad/driver/lantiq_drv_mei_cpe-git/lantiq_drv_mei_cpe/: ChangeLog  Makefile.am  README  configure.in
platform/iad/driver/lantiq_drv_mei_cpe-git/lantiq_drv_mei_cpe/build_vxworks/: drv_mei_cpe.wpj
platform/iad/driver/lantiq_drv_mei_cpe-git/lantiq_drv_mei_cpe/doc/: doxyconfig  header.html  mei_cpe_drv.h
platform/iad/driver/lantiq_drv_mei_cpe-git/lantiq_drv_mei_cpe/scripts/: alias_drv_mei_cpe.sh  enable_ARC_JTAG.sh  ifx_mei_cpe_drv_init.sh  inst_drv_mei_cpe.sh
platform/iad/driver/lantiq_drv_mei_cpe-git/lantiq_drv_mei_cpe/src/: Makefile.am  alias_drv_mei_cpe.sh  cmv_message_format.h  drv_if_vdsl2_atm_oam.h  drv_if_vdsl2_clear_eoc.h  drv_mei_cpe_api.h  drv_mei_cpe_api_atm_ptm_intern.c  drv_mei_cpe_api_atm_ptm_intern.h  drv_mei_cpe_api_intern.c  drv_mei_cpe_api_intern.h  drv_mei_cpe_atmoam.h  drv_mei_cpe_atmoam_common.c  drv_mei_cpe_atmoam_common.h  drv_mei_cpe_clear_eoc.h  drv_mei_cpe_clear_eoc_common.c  drv_mei_cpe_clear_eoc_common.h  drv_mei_cpe_common.c  drv_mei_cpe_config.h  drv_mei_cpe_dbg.c  drv_mei_cpe_dbg.h  drv_mei_cpe_dbg_access.c  drv_mei_cpe_dbg_access.h  drv_mei_cpe_dbg_driver.c  drv_mei_cpe_dbg_driver.h  drv_mei_cpe_dbg_streams.c  drv_mei_cpe_dbg_streams.h  drv_mei_cpe_dbg_streams_common.h  drv_mei_cpe_device_cntrl.c  drv_mei_cpe_device_cntrl.h  drv_mei_cpe_device_vrx.c  drv_mei_cpe_download.c  drv_mei_cpe_download.h  drv_mei_cpe_download_vrx.c  drv_mei_cpe_download_vrx.h  drv_mei_cpe_download_vrx_common.h  drv_mei_cpe_driver_msg.c  drv_mei_cpe_driver_msg.h  drv_mei_cpe_dsm.c  drv_mei_cpe_dsm.h  drv_mei_cpe_dsm_common.h  (+37 more)
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/: .cproject  CHANGELOG  CHANGELOG_TAPI_V3  Makefile.am  README  configure.in  drv_tapi_version.h
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/doc/: doxyconfig_v3.dxy  footer.html
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/include/: drv_tapi_config.h  drv_tapi_dev_io.h  drv_tapi_errno.h  drv_tapi_event_io.h  drv_tapi_fxo_ll_interface.h  drv_tapi_if_version.v3  drv_tapi_if_version.v4  drv_tapi_io.h  drv_tapi_io_indexes.h  drv_tapi_kio.h  drv_tapi_kpi_io.h  drv_tapi_ll_interface.h  drv_tapi_qos_io.h  drv_tapi_qos_io_indexes.h  drv_tapi_qos_ll_interface.h  drv_tapi_strerrno.h  ifx_udp_redirect.h  lib_bufferpool.h  lib_fifo.h
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/m4/: common.m4  kernel.m4  lib_ifxos.m4
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/script/: addLibtool.sh  updateIoctl.pl
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/src/: Makefile.am  drv_tapi.h  drv_tapi.wpj  drv_tapi_api.h  drv_tapi_cid.c  drv_tapi_cid.h  drv_tapi_debug.c  drv_tapi_debug.h  drv_tapi_dev_io.c  drv_tapi_dial.c  drv_tapi_event.c  drv_tapi_event.h  drv_tapi_fxo.c  drv_tapi_fxo.h  drv_tapi_init.c  drv_tapi_ioctl.c  drv_tapi_ioctl.h  drv_tapi_ioctl_handlers.h  drv_tapi_kpi.c  drv_tapi_kpi.h  drv_tapi_linux.c  drv_tapi_linux.h  drv_tapi_meter.c  drv_tapi_misc.c  drv_tapi_opcontrol.c  drv_tapi_osmap.h  drv_tapi_pcm.c  drv_tapi_polling.c  drv_tapi_polling.h  drv_tapi_ppd.c  drv_tapi_ppd.h  drv_tapi_qos.c  drv_tapi_qos.h  drv_tapi_ring.c  drv_tapi_srtp.c  drv_tapi_srtp.h  drv_tapi_stat.c  drv_tapi_stream.c  drv_tapi_stream.h  drv_tapi_tone.c  (+6 more)
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/tests/: Makefile.am  lib_buffertest.c  lib_fifotest.c
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/vxworks_6.4/: .project  .wrproject
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/vxworks_6.6/: .project  .wrproject
platform/iad/driver/lantiq_drv_tapi-git/lantiq_drv_tapi/xml/: Makefile.am  drv_tapi_io.dtd  drv_tapi_io.xml  drv_tapi_io_handler.xsl  drv_tapi_io_handler_decl.xsl  drv_tapi_io_handler_type.xsl  drv_tapi_io_index.xsl  drv_tapi_io_lookup.xsl  drv_tapi_qos_io.xml
platform/iad/driver/lantiq_drv_vmmc-git/lantiq_drv_vmmc/: CHANGELOG  Makefile.am  README  configure.in  drv_version.h
platform/iad/driver/lantiq_drv_vmmc-git/lantiq_drv_vmmc/doc/: doxyconfig  lantiq,mps-xrx100.txt
platform/iad/driver/lantiq_drv_vmmc-git/lantiq_drv_vmmc/include/: drv_vmmc_errno.h  drv_vmmc_strerrno.h  vmmc_io.h
platform/iad/driver/lantiq_drv_vmmc-git/lantiq_drv_vmmc/m4/: el.m4  tapi.m4
platform/iad/driver/lantiq_drv_vmmc-git/lantiq_drv_vmmc/src/: Makefile.am  drv_api.h  drv_vmmc_access.h  drv_vmmc_alm.c  drv_vmmc_alm.h  drv_vmmc_alm_priv.h  drv_vmmc_announcements.c  drv_vmmc_announcements.h  drv_vmmc_api.c  drv_vmmc_api.h  drv_vmmc_bbd.c  drv_vmmc_bbd.h  drv_vmmc_cod.c  drv_vmmc_cod.h  drv_vmmc_cod_priv.h  drv_vmmc_con.c  drv_vmmc_con.h  drv_vmmc_con_priv.h  drv_vmmc_dect.c  drv_vmmc_dect.h  drv_vmmc_dect_priv.h  drv_vmmc_event.c  drv_vmmc_fw_commands.h  drv_vmmc_fw_commands_sdd.h  drv_vmmc_fw_commands_voip.h  drv_vmmc_fw_data.h  drv_vmmc_gr909.c  drv_vmmc_gr909.h  drv_vmmc_hostapi.h  drv_vmmc_init.c  drv_vmmc_init.h  drv_vmmc_init_cap.c  drv_vmmc_int.c  drv_vmmc_int.h  drv_vmmc_int_evt.h  drv_vmmc_ioctl.c  drv_vmmc_linux.c  drv_vmmc_linux.h  drv_vmmc_ll_if_version.h  drv_vmmc_osmap.h  (+20 more)
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/: ChangeLog  LICENSE  Makefile.am  README  autogen.sh  configure.in  zlib_license.txt
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/build_vxworks/: lib_ifxos.wpj  lib_ifxos_xapi.wpj
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/doc/: ifxos_all.dxcfg  ifxos_ecos.dxcfg  ifxos_interface.dxcfg  ifxos_linux.dxcfg  ifxos_nucleus.dxcfg  ifxos_vxworks.dxcfg
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/src/: Makefile.am
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/vxworks_6.4/: .project  .wrproject
platform/iad/driver/lantiq_lib_ifxos-git/lantiq_lib_ifxos/vxworks_6.6/: .cproject  .project  .wrproject
(+1927 files in other folders)
